[project]
name = "anytpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sattwik Kumar Sahu", email = "sattwik21@iiserb.ac.in" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
anytpp = "anytpp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
